# compliance-backend

./: .baseimagedigest  .codecov.yml  .commitlint.yml  .dockerignore  .env  .env.example  .gemrc.prod  .gitignore  .rubocop.yml  .simplecov  .syft.yaml  .travis.yml  AGENTS.md  Dockerfile  Gemfile  Gemfile.local.example  Jenkinsfile  Jenkinsfile-smoke.groovy  Jenkinsfile.bck  Makefile  README.md  Rakefile  brakeman_output.markdown  build_deploy.sh  clowdapp-minimal.yaml  clowdapp.yaml  codecov.yml  custom-template.yaml  devel.Dockerfile  devel.entrypoint.sh  devel.json  docker-compose.yml  docker-compose_nonclowder.yml  e2e-test-cgroups-limit-template.yaml  entrypoint.sh  github-ci.json  karafka.rb  post_test_results.sh  pr_check.sh  renovate.json  (+11 more)
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.hermetic_builds/: README.md  parse_dockerfile.rb
.hermetic_builds/cargo/: Cargo.toml  config.toml
.tekton/: compliance-backend-pull-request.yaml  compliance-backend-push.yaml  compliance-backend-sc-pull-request.yaml  compliance-backend-sc-push.yaml
config/: application.rb  appsignal.yml  cable.yml  credentials.yml.enc  database.yml  newrelic.yml  puma.cfg  puma.rb  racecar.rb  racecar.yml  routes.rb  settings.yml  sidekiq.yml  ssg-ansible-tasks.default.yaml  supported_ssg.default.yaml  supported_ssg.yaml
dashboards/: grafana-dashboard-insights-compliance-general.configmap.yaml  grafana-dashboard-insights-compliance-general.template.yaml
db/: .schema.rb.swp  cyndi_setup_devel.sql  cyndi_setup_test.sql  grant_db_user.sql  schema.rb  seeds.dev.rb  seeds.rb
deploy/: build-deploy-common.sh  clowdapp-compliance-ssg.yaml  clowdapp.yaml  clowder-common-bash.sh  clowder-config-main.sha256  get-clowder-common-bash.sh
e2e-test-cgroup-limits/: run-e2e-cgroup-limits-test-local-container.sh  run-e2e-cgroup-limits-test-remote-cluster.sh  run-e2e-cgroup-limits-tests.sh
lib/: exceptions.rb  gabi.rb  insights.rb  logger_with_audit.rb  query_parser.rb
podman/: compliance-db.yaml
scripts/: REMOVE_cji_smoke_test.sh  REMOVE_deploy_ephemeral_env.sh  abort_if_pending_migrations.sh  bootstrap.sh  check_migration_status_and_ssg_synced.sh  compliance-db.yaml  fetch_compliance_logs.sh  nightly_smoke_ui_tests.sh  set_cgroup_limits.sh  trust-RH-certificate  unit_test.sh
spec/: delete_host_spec.rb  rails_helper.rb  spec_helper.rb  swagger_helper.rb
swagger/: tailoring_file.json
test/: host_fixtures.rb  (+1 more)
(+1437 files in other folders)
